--- a/login_manager.html
+++ b/login_manager.html
@@ -19,11 +19,11 @@
                     </div>
                     <div class="col-12 col-md-6 m-auto">
                         <div class="card-body">
+                            <div class="text-end text-secondary receptionist-text">Manager</div>
                             <!-- logo and brand  -->
                             <div class="d-flex justify-content-center">
                                 <a href="#" class="d-flex justify-content-center align-items-center text-primary text-decoration-none pb-2 mb-md-0">
-                                    <i class="fa-solid fa-hand-holding-heart display-6 me-sm-2"></i>
-                                    <h1 class="display-4 d-none d-sm-inline">Aruga</h1>
+                                    <img src="/assets/imgs/logo-blue.png" alt="" height="100">
                                 </a>
                             </div>
                             <!-- welcome back  -->
